--- a/public/homepage.html
+++ b/public/homepage.html
@@ -205,6 +205,7 @@ body, html {
     <i class="icon-nodejs"></i>&nbsp;&nbsp;
     <i class="icon-mongodb"></i>&nbsp;&nbsp;
     <i class="icon-npm"></i>&nbsp;&nbsp;
+    <i class="icon-mysql"></i>&nbsp;&nbsp;
     <image src="/Assets/icon/visualstudio.png" class="icon-50" />&nbsp;&nbsp;
     <image src="/Assets/icon/processing.png" class="icon-50" />&nbsp;&nbsp;
   </p>
@@ -214,8 +215,7 @@ body, html {
     <i class="icon-unity"></i>&nbsp;&nbsp;
     <i class="fa fa-apple"></i>&nbsp;&nbsp;
     <i class="icon-reactjs"></i>&nbsp;&nbsp;
-    <i class="icon-csharp"></i>&nbsp;&nbsp;
-    <i class="icon-mysql"></i>&nbsp;&nbsp;
+    <i class="icon-csharp"></i>&nbsp;&nbsp;    
   </p>
 </div>
 
@@ -229,42 +229,9 @@ body, html {
 <!-- Container (Portfolio Section) -->
 <div class="w3-content w3-container w3-padding-64" id="portfolio">
   
-  <p class="w3-center text-font"><em>Here are some of my latest projects.<br> Click on them to browse more information</em></p><br>
-  <h3 class="w3-center text-font">GAME-RELATED PROJECTS</h3>
-  <!-- Responsive Grid. Four columns on tablets, laptops and desktops. Will stack on mobile devices/small screens (100% width) -->
-  <div class="w3-row-padding w3-center">
-
-    <div class="w3-col m3">
-      <a href="/project#imitator"><img src="/Assets/project_screenshot/imitator.png" style="width:100%" class="w3-hover-opacity" alt="Imitator"></a>
-    </div>
-
-    <div class="w3-col m3">
-      <a href="/project#music-shooter"><img src="/Assets/project_screenshot/musicshooter.png" style="width:100%"  class="w3-hover-opacity" alt="Music shooter"></a>
-    </div>
-
-    <div class="w3-col m3">
-      <a href="/project#ball-game"><img src="/Assets/project_screenshot/ballgame.png" style="width:100%" class="w3-hover-opacity" alt="Ball Game"></a>
-    </div>
-
-    <div class="w3-col m3">
-     <a href="/project#fly"><img src="/Assets/project_screenshot/fly.png" style="width:100%" class="w3-hover-opacity" alt="Ball Game"></a>
-    </div>
-
-  </div>
-  <br/>
-
-  <h3 class="w3-center text-font">OTHER PROJECTS</h3>
+  <p class="w3-center text-font"><em>Here are my latest projects.<br> Click on them to browse more information</em></p><br>
   
-  <div class="w3-row-padding w3-center">
-
-    <div class="w3-col m6">
-      <a href="/project#dinder"><img src="/Assets/project_screenshot/dinder.png" style="width:75%" class="w3-hover-opacity" alt="Dinder"></a>
-    </div>
-
-    <div class="w3-col m6">
-      <a href="/project#waltercheng"><img src="/Assets/project_screenshot/waltercheng.png" style="width:75%" class="w3-hover-opacity" alt="WalterCheng"></a>
-    </div>
-
+  <div id="homepage-projects">
   </div>
 
   <a href="/project" class="w3-center">
@@ -355,9 +322,6 @@ body, html {
   <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css</a></p>
 </footer>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script src="js/scroll.js" type="text/javascript"></script>
-
 <script>
 /*function myMap()
 {
@@ -405,6 +369,11 @@ function toggleFunction() {
 }
 
 </script>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBu-916DdpKAjTmJNIgngS6HL_kDIKU0aU&callback=myMap"></script>
+
+<!--JQuery and my own client-->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+<script src="js/scroll.js"></script>
+<script src="js/homeClient.js"></script>
+
 </body>
 </html>
