--- a/public/homepage.html
+++ b/public/homepage.html
@@ -153,6 +153,11 @@ body, html {
     <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:90%">90%</div>
   </div>
 
+  <p style="font-size:20px"><i class="icon-javascript"></i>&nbsp;&nbsp;&nbsp;Javascript&nbsp;&nbsp;&nbsp;<span style="font-size:12px"><i class="fa fa-gears"></i> Currently using</span></p>
+  <div class="w3-light-grey">
+    <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:85%">85%</div>
+  </div>
+
   <p style="font-size:20px"><i class="icon-python"></i>&nbsp;&nbsp;&nbsp;Python</p>
   <div class="w3-light-grey">
     <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:85%">85%</div>
@@ -163,22 +168,22 @@ body, html {
     <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:75%">75%</div>
   </div>
 
-  <p style="font-size:20px"><i class="fa fa-linux"></i>&nbsp;&nbsp;&nbsp;Linux</p>
+  <p style="font-size:20px"><i class="fa fa-linux"></i>&nbsp;&nbsp;&nbsp;Linux&nbsp;&nbsp;&nbsp;<span style="font-size:12px"><i class="fa fa-gears"></i> Currently using</span></p>
   <div class="w3-light-grey">
     <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:75%">75%</div>
   </div>
 
-  <p style="font-size:20px"><i class="icon-c"></i>&nbsp;&nbsp;&nbsp;C</p>
+  <p style="font-size:20px"><i class="icon-c"></i>&nbsp;&nbsp;&nbsp;C&nbsp;&nbsp;&nbsp;<span style="font-size:12px"><i class="fa fa-gears"></i> Currently using</span></p>
   <div class="w3-light-grey">
     <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:75%">75%</div>
   </div>
 
-  <p style="font-size:20px"><image src="/Assets/icon/opengl.png" class="icon-16" />&nbsp;&nbsp;&nbsp;OpenGL&nbsp;&nbsp;&nbsp;<span style="font-size:12px"><i class="fa fa-gears"></i> Currently using</span></p>
+  <p style="font-size:20px"><image src="/Assets/icon/opengl.png" class="icon-16" />&nbsp;&nbsp;&nbsp;OpenGL</p>
   <div class="w3-light-grey">
     <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:75%">75%</div>
   </div>
 
-  <p style="font-size:20px"><i class="fa fa-android"></i>&nbsp;&nbsp;&nbsp;Android Studio&nbsp;&nbsp;&nbsp;<span style="font-size:12px"><i class="fa fa-gears"></i> Currently using</span></p>
+  <p style="font-size:20px"><i class="fa fa-android"></i>&nbsp;&nbsp;&nbsp;Android Studio</p>
   <div class="w3-light-grey">
     <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:80%">80%</div>
   </div>
@@ -188,14 +193,9 @@ body, html {
     <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:80%">80%</div>
   </div>
 
-  <p style="font-size:20px"><image src="/Assets/icon/scheme.png" class="icon-16" />&nbsp;&nbsp;&nbsp;Scheme&nbsp;&nbsp;&nbsp;<span style="font-size:12px"><i class="fa fa-gears"></i> Currently using</span></p>
+  <p style="font-size:20px"><image src="/Assets/icon/scheme.png" class="icon-16" />&nbsp;&nbsp;&nbsp;Scheme</p>
   <div class="w3-light-grey">
     <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:80%">80%</div>
-  </div>
-
-  <p style="font-size:20px"><i class="icon-javascript"></i>&nbsp;&nbsp;&nbsp;Javascript</p>
-  <div class="w3-light-grey">
-    <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:75%">75%</div>
   </div>
 
   <p class="w3-large w3-center w3-padding-8 text-font">Still more here:</p>
