adding new project and changing some orders

--- a/public/projectpage.html
+++ b/public/projectpage.html
@@ -164,6 +164,7 @@ body, html {
       <div id="date" class="sorting w3-hover-black">Date</div>
       <div id="language" class="sorting w3-hover-black">Language</div>
       <div id="group" class="sorting w3-hover-black">Group</div>
+      <div id="fav" class="sorting w3-hover-black">Favourite</div>
     </div>
   </div>
 
