--- a/public/projectpage.html
+++ b/public/projectpage.html
@@ -158,13 +158,13 @@ body, html {
 <div class="w3-content w3-center">
 
   <div class="w3-padding-32 dropdown">
-    <button id="sortBtn" class="w3-button w3-light-grey">Sorted By type<i class="fa fa-arrow-down w3-margin-left"></i></button>
+    <button id="sortBtn" class="w3-button w3-light-grey">Sorted By Fav<i class="fa fa-arrow-down w3-margin-left"></i></button>
     <div id="sortDropdown" class="dropdown-content">
+    <div id="fav" class="sorting w3-hover-black">Favourite</div>
       <div id="type" class="sorting w3-hover-black">Type</div>
       <div id="date" class="sorting w3-hover-black">Date</div>
       <div id="language" class="sorting w3-hover-black">Language</div>
       <div id="group" class="sorting w3-hover-black">Group</div>
-      <div id="fav" class="sorting w3-hover-black">Favourite</div>
     </div>
   </div>
 
