--- a/public/homepage.html
+++ b/public/homepage.html
@@ -137,8 +137,8 @@ body, html {
 
 <!-- Container (About Section) -->
 <div class="w3-content w3-container w3-padding-32" id="about">
-  <h3 class="w3-center text-font">ABOUT ME</h3>
-  <p class="w3-center w3-padding-32 text-font">I am a programmer who like to learn new thing, create things, make beautiful things that people love!</p>
+  <h3 class="w3-center text-font">SOFTWARE DEVELOPER | CODER | DESIGNER | CREATER</h3>
+  <!--p class="w3-center w3-padding-32 text-font">idk what to write rn, probably gonna wait to write something interesting</p-->
 
   <!-- programming langauge-->
   <p class="w3-large w3-center w3-padding-8 text-font">Technical Experience:</p>
