--- a/public/homepage.html
+++ b/public/homepage.html
@@ -141,19 +141,19 @@ body, html {
   <!--p class="w3-center w3-padding-32 text-font">idk what to write rn, probably gonna wait to write something interesting</p-->
 
   <!-- programming langauge-->
-  <p class="w3-large w3-center w3-padding-8 text-font">Technical Experience:</p>
+  <p class="w3-large w3-center w3-padding-8 text-font">I am recently working on these:</p>
   <!--items here -->
-  <p style="font-size:20px"><i class="icon-cplusplus"></i>&nbsp;&nbsp;&nbsp;C++&nbsp;&nbsp;&nbsp;<span style="font-size:12px"><i class="fa fa-gears"></i> Currently using</span></p>
+  <p style="font-size:20px"><i class="icon-cplusplus"></i>&nbsp;&nbsp;&nbsp;C++&nbsp;&nbsp;&nbsp;</p>
   <div class="w3-light-grey">
     <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:90%">90%</div>
   </div>
 
-  <p style="font-size:20px"><i class="icon-java-bold"></i>&nbsp;&nbsp;&nbsp;Java&nbsp;&nbsp;&nbsp;<span style="font-size:12px"><i class="fa fa-gears"></i> Currently using</span></p>
+  <p style="font-size:20px"><i class="icon-java-bold"></i>&nbsp;&nbsp;&nbsp;Java&nbsp;&nbsp;&nbsp;</p>
   <div class="w3-light-grey">
     <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:90%">90%</div>
   </div>
 
-  <p style="font-size:20px"><i class="icon-javascript"></i>&nbsp;&nbsp;&nbsp;Javascript&nbsp;&nbsp;&nbsp;<span style="font-size:12px"><i class="fa fa-gears"></i> Currently using</span></p>
+  <p style="font-size:20px"><i class="icon-javascript"></i>&nbsp;&nbsp;&nbsp;Javascript&nbsp;&nbsp;&nbsp;</p>
   <div class="w3-light-grey">
     <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:85%">85%</div>
   </div>
@@ -163,59 +163,57 @@ body, html {
     <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:85%">85%</div>
   </div>
 
-  <p style="font-size:20px"><i class="icon-git"></i>&nbsp;&nbsp;&nbsp;Git&nbsp;&nbsp;&nbsp;<span style="font-size:12px"><i class="fa fa-gears"></i> Currently using</span></p>
-  <div class="w3-light-grey">
-    <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:75%">75%</div>
-  </div>
-
-  <p style="font-size:20px"><i class="fa fa-linux"></i>&nbsp;&nbsp;&nbsp;Linux&nbsp;&nbsp;&nbsp;<span style="font-size:12px"><i class="fa fa-gears"></i> Currently using</span></p>
-  <div class="w3-light-grey">
-    <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:75%">75%</div>
-  </div>
-
-  <p style="font-size:20px"><i class="icon-c"></i>&nbsp;&nbsp;&nbsp;C&nbsp;&nbsp;&nbsp;<span style="font-size:12px"><i class="fa fa-gears"></i> Currently using</span></p>
-  <div class="w3-light-grey">
-    <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:75%">75%</div>
-  </div>
-
-  <p style="font-size:20px"><image src="/Assets/icon/opengl.png" class="icon-16" />&nbsp;&nbsp;&nbsp;OpenGL</p>
-  <div class="w3-light-grey">
-    <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:75%">75%</div>
-  </div>
-
-  <p style="font-size:20px"><i class="fa fa-android"></i>&nbsp;&nbsp;&nbsp;Android Studio</p>
+  <p style="font-size:20px"><i class="icon-git"></i>&nbsp;&nbsp;&nbsp;Git&nbsp;&nbsp;&nbsp;</p>
   <div class="w3-light-grey">
     <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:80%">80%</div>
   </div>
 
-  <p style="font-size:20px"><image src="/Assets/icon/sfml.png" class="icon-16" />&nbsp;&nbsp;&nbsp;SFML</p>
+  <p style="font-size:20px"><i class="fa fa-linux"></i>&nbsp;&nbsp;&nbsp;Linux&nbsp;&nbsp;&nbsp;</p>
   <div class="w3-light-grey">
-    <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:80%">80%</div>
+    <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:75%">75%</div>
   </div>
 
-  <p style="font-size:20px"><image src="/Assets/icon/scheme.png" class="icon-16" />&nbsp;&nbsp;&nbsp;Scheme</p>
+  <p style="font-size:20px"><i class="icon-c"></i>&nbsp;&nbsp;&nbsp;C&nbsp;&nbsp;&nbsp;</p>
   <div class="w3-light-grey">
-    <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:80%">80%</div>
+    <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:75%">75%</div>
+  </div>
+
+   <p style="font-size:20px"><i class="icon-go"></i>&nbsp;&nbsp;&nbsp;Go&nbsp;&nbsp;&nbsp;<span style="font-size:12px"><i class="fa fa-gears"></i> Still a beginner</span></p>
+  <div class="w3-light-grey">
+    <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:50%">50%</div>
+  </div>
+
+   <p style="font-size:20px"><i class="icon-haskell"></i>&nbsp;&nbsp;&nbsp;Haskell&nbsp;&nbsp;&nbsp;<span style="font-size:12px"><i class="fa fa-gears"></i> Still a beginner</span></p>
+  <div class="w3-light-grey">
+    <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:50%">50%</div>
   </div>
 
   <p class="w3-large w3-center w3-padding-8 text-font">Still more here:</p>
   <p style="font-size:50px" class="w3-center">
-    <i class="icon-css"></i>&nbsp;&nbsp;
-    <i class="icon-html"></i>&nbsp;&nbsp;
-    <i class="icon-nodejs"></i>&nbsp;&nbsp;
-    <i class="icon-mongodb"></i>&nbsp;&nbsp;
-    <i class="icon-npm"></i>&nbsp;&nbsp;
-    <i class="icon-mysql"></i>&nbsp;&nbsp;
-    <image src="/Assets/icon/visualstudio.png" class="icon-50" />&nbsp;&nbsp;
-    <image src="/Assets/icon/processing.png" class="icon-50" />&nbsp;&nbsp;
+    <i class="icon-css" title="CSS"></i>&nbsp;&nbsp;
+    <i class="icon-html" title="HTML"></i>&nbsp;&nbsp;
+    <i class="icon-nodejs" title="Node.js"></i>&nbsp;&nbsp;
+    <i class="icon-mongodb" title="MongoDB"></i>&nbsp;&nbsp;
+    <i class="icon-npm" title="NPM"></i>&nbsp;&nbsp;
+    <i class="icon-mysql" title="mySQL"></i>&nbsp;&nbsp;
+    <image src="/Assets/icon/scheme.png" title="Scheme" class="icon-50" />&nbsp;&nbsp;
+    <image src="/Assets/icon/visualstudio.png" title="Visual Studio" class="icon-50" />&nbsp;&nbsp;
+    <image src="/Assets/icon/sfml.png" title="SFML" class="icon-50" />&nbsp;&nbsp;
+    <image src="/Assets/icon/processing.png" title="Processing" class="icon-50" />&nbsp;&nbsp;
+    <i class="fa fa-android" title="Android Studio" ></i>&nbsp;&nbsp;
+    <image src="/Assets/icon/opengl.png"  title="OpenGL" class="icon-50" />&nbsp;&nbsp;
+    <i class="icon-reactjs" title="React Native"></i>&nbsp;&nbsp;
   </p>
-
-  <p class="w3-large w3-center w3-padding-8 text-font">I will know it in the future:</p>
+  
+  <!-- maybe add Prolog, inteljet, VSCode-->
+  <p class="w3-large w3-center w3-padding-8 text-font">Planning to learn these:</p>
   <p style="font-size:50px" class="w3-center">
-    <i class="icon-unity"></i>&nbsp;&nbsp;
-    <i class="fa fa-apple"></i>&nbsp;&nbsp;
-    <i class="icon-reactjs"></i>&nbsp;&nbsp;
-    <i class="icon-csharp"></i>&nbsp;&nbsp;    
+    <i class="icon-unity" title="Unity"></i>&nbsp;&nbsp;
+    <i class="fa fa-apple" title="iOS App (Possibly Xcode)"></i>&nbsp;&nbsp;
+    
+    <i class="icon-csharp" title="C Sharp"></i>&nbsp;&nbsp;  
+    <i class="icon-ruby" title="Ruby"></i>&nbsp;&nbsp;   
+    <i class="icon-php" title="php"></i>&nbsp;&nbsp;   
   </p>
 </div>
 
