--- a/public/puzzle/emoji.html
+++ b/public/puzzle/emoji.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
-	<title>Puzzle 8</title>
+	<title>Puzzle 10</title>
 	<style>
 		body {background-color: #696969;}
 		p { text-align: center; }
 	</style>
 	<body>
-	<p>11 1101 010 000 0</p>
-	<!--just a famous text transmitting method-->
+	<p>which company produced this</p>
+	<!--the bad one, not the good one-->
 	</body>
 </html>
