--- a/public/puzzle/morse.html
+++ b/public/puzzle/morse.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
-	<title>Puzzle 8</title>
+	<title>Puzzle 9</title>
 	<style>
 		body {background-color: #696969;}
 		p { text-align: center; }
 	</style>
 	<body>
-	<p>11 1101 010 000 0</p>
-	<!--just a famous text transmitting method-->
+	<p>10111 10010 11010 00</p>
+	<!--it might not be english-->
 	</body>
 </html>
