additional job title

--- a/public/puzzle/akirameru.html
+++ b/public/puzzle/akirameru.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html>
-	<title>Puzzle 11</title>
+	<title>Puzzle 13</title>
 	<style>
 		body {background-color: #696969;}
 		p { text-align: center; }
 	</style>
 	<body>
-	<p>qw to nm</p>
-	<p>12 3 25 12 8 5 8 23 3</p>
-	<!--Christopher Latham Sholes-->
+	<p>01 10100 000 10001 10110</p>
+	<!--just like what you did, just not in english-->
 	</body>
 </html>
