--- a/public/homepage.html
+++ b/public/homepage.html
@@ -262,7 +262,8 @@ body, html {
     <p style="font-weight:bold">Teaching Assistant for Computer Science faculty in Carleton University<br/>
     Jan 2017 - Apr 2017 Introduction to Computational Thinking for Arts and Social Science<br/>
     Sep 2017 - Dec 2017 Introudction to Computer Science I<br/>
-    Jan 2018 - Current Fundamentals Web Application</p>
+    Jan 2018 - Apr 2017 Fundamentals Web Application<br/>
+    Sep 2018 - Current  Programming Paradigms</p>
 
     <img src="/Assets/nokia.png" style="width:30%"class="w3-hover-opacity" alt="Nokia" />
     <p style="font-weight:bold">Embedded Software Developer in Nokia<br/>
