--- a/public/puzzle/0621.html
+++ b/public/puzzle/0621.html
@@ -7,6 +7,9 @@
 	</style>
 	<body>
 		<p>I see you like some puzzle game, right?</p>
+		<p>Just to be clear, this is not something super difficult to solve</p>
+		<p>It is just some simple puzzles from different area of studies</p>
+		<p>If you are ready</p>
 		<p>why don't you try /puzzle/start </p>
 	</body>
 </html>
