--- a/public/jay/listen.html
+++ b/public/jay/listen.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html>
-	<title>If not I can even make a better one</title>
+	<title>But now it's your turn</title>
 	<style>
 		body {background-color: #621420;}
 		p { text-align: center; }
 	</style>
 	<body>
-		<p>I go __ school by bus</p>
-		<p>type the answer in /jay/_</p>
+		<p>I hide some messages here</p>
+		<p>it's simple to solve</p>
+		<p>just replace /jay/listen to /jay/prepare</p>
+		<p>you will know the next key there</p>
 	</body>
 </html>
