adding more stages

--- a/public/puzzle/0000FF.html
+++ b/public/puzzle/0000FF.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html>
-	<title>Puzzle 9</title>
+	<title>Puzzle 16</title>
 	<style>
-		body {background-color: blue;}
+		body {background-color: #808080;}
 		p { text-align: center; }
 	</style>
 	<body>
-	<p>1F600 ~ E007F</p>
-	<!--U+-->
+	<p>not sure what to do yet</p>
 	</body>
 </html>
