--- a/public/puzzle/akirameru.html
+++ b/public/puzzle/akirameru.html
@@ -2,11 +2,11 @@
 <html>
 	<title>Puzzle 13</title>
 	<style>
-		body {background-color: #888888;}
+		body {background-color: blue;}
 		p { text-align: center; }
 	</style>
 	<body>
-	<p>01 10100 000 10001 10110</p>
-	<!--just like what you did, just not in english-->
+	<p>67 72 65 61 74</p>
+	<!--won't it start to be boring to keep using number to represent letter?-->
 	</body>
 </html>
