--- a/public/puzzle/dance.html
+++ b/public/puzzle/dance.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
-	<title>Puzzle 4 -- caesar</title>
+	<title>Puzzle 4</title>
 	<style>
 		body {background-color: #999999;}
 		p { text-align: center; }
 	</style>
 	<body>
 		<p>hvieq</p>
-		<!-- shift number is the puzzle number-->
+		<!-- it is just caesar, shift number is the puzzle number-->
 	</body>
 </html>
