--- a/public/puzzle/sensitive.html
+++ b/public/puzzle/sensitive.html
@@ -2,7 +2,7 @@
 <html>
 	<title>Puzzle 12</title>
 	<style>
-		body {background-color: #888888;}
+		body {background-color: blue;}
 		p { text-align: center; }
 	</style>
 	<body>
