--- a/public/puzzle/0000FF.html
+++ b/public/puzzle/0000FF.html
@@ -6,6 +6,6 @@
 		p { text-align: center; }
 	</style>
 	<body>
-	<p>not sure what to do yet</p>
+	<p>if you are here, you got this so far, i haven't came up with what's the next puzzle, ill try my best</p>
 	</body>
 </html>
