--- a/public/homepage.html
+++ b/public/homepage.html
@@ -158,6 +158,11 @@ body, html {
     <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:85%">85%</div>
   </div>
 
+  <p style="font-size:20px"><i class="icon-haskell"></i>&nbsp;&nbsp;&nbsp;Haskell&nbsp;&nbsp;&nbsp;<span style="font-size:12px"><i class="fa fa-gears"></i> Teaching Assistant</span></p>
+  <div class="w3-light-grey">
+    <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:90%">90%</div>
+  </div>
+
   <p style="font-size:20px"><i class="icon-python"></i>&nbsp;&nbsp;&nbsp;Python</p>
   <div class="w3-light-grey">
     <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:85%">85%</div>
@@ -179,11 +184,6 @@ body, html {
   </div>
 
    <p style="font-size:20px"><i class="icon-go"></i>&nbsp;&nbsp;&nbsp;Go&nbsp;&nbsp;&nbsp;<span style="font-size:12px"><i class="fa fa-gears"></i> Still a beginner</span></p>
-  <div class="w3-light-grey">
-    <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:50%">50%</div>
-  </div>
-
-   <p style="font-size:20px"><i class="icon-haskell"></i>&nbsp;&nbsp;&nbsp;Haskell&nbsp;&nbsp;&nbsp;<span style="font-size:12px"><i class="fa fa-gears"></i> Still a beginner</span></p>
   <div class="w3-light-grey">
     <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:50%">50%</div>
   </div>
